Applied patch from Al Byers to fix a couple of widget issues and change the menu widget to use CSS instead of a table for layout; beyond that patch did a number of cleanups and simplifications for cleaner defaults and resulting HTML when using the menu widget, and also more consistent with other places using the tabContainer style and such by default; this patch also includes some corrections and improvements in the Example menu and form definitions which were used to test this
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5469 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -55,6 +55,9 @@ webapp.ControllerConfig.expireTime=10000
 
 widget.form.locationResource.expireTime=10000
 widget.form.webappResource.expireTime=10000
+widget.menu.classResource.expireTime=10000
+widget.menu.locationResource.expireTime=10000
+widget.menu.webappResource.expireTime=10000
 widget.screen.locationResource.expireTime=10000
 widget.screen.webappResource.expireTime=10000
 widget.tree.locationResource.expireTime=10000
