Updates to communication events from Al Byers
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5471 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -1,4 +1,4 @@
-####
+###
 # OFBiz UiLabel Properties used for the party component 
 #
 
@@ -61,6 +61,7 @@ PageTitleEditSecurityGroup=Edit Security Group
 PageTitleEditSecurityGroupPermissions=Edit Security Group Permissions
 PageTitleEditSecurityGroupUserLogins=Edit Security Group UserLogins
 PageTitleEditUserLoginSecurityGroups=Edit UserLogin Security Groups
+PageTitleFindCommunications=Find Communications
 PageTitleFindParty=Find Party(s)
 PageTitleFindPartyClassificationGroups=Find Party Classification Groups
 PageTitleFindSecurityGroup=Find Security Group
@@ -164,6 +165,7 @@ PartyCustomerRequest=Customer Request
 PartyCybersourceAvsOver=Cybersource AVS Override
 PartyDeleteVendorPermissionError=Security Error\: to run deleteVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyDisabled=DISABLED
+PartyEditCommunicationEvent=Edit Communication Event
 PartyEditContactInformation=Edit Contact Information
 PartyEditSecurityGroupWithId=Edit Security Group With ID
 PartyEftAccount=EFT Account
@@ -175,6 +177,7 @@ PartyEnteredDate=Entered Date
 PartyEnterPasswordTwice=You must enter your password twice
 PartyEventPurpose=Event Purpose(s)
 PartyEventType=Event Type
+PartyFindCommunicationEvents=Find Communication Events
 PartyFindParties=Find Parties
 PartyFindParty=Find Party
 PartyFirstName=First Name
@@ -197,6 +200,7 @@ PartyInitialUserAgent=Initial User Agent
 PartyLastName=Last Name
 PartyLastNameMissingError=Lastname is Missing
 PartyLastVisit=Last Visit(s)  
+PartyListCommunicationEvents=List Communication Events
 PartyListItems=List Items
 PartyListName=List Name
 PartyListType=List Type
@@ -258,6 +262,10 @@ PartyPassportNumber=Passport Number
 PartyPasswordMatchError=Your Passwords do not match
 PartyPasswordMissing=Password is Missing
 PartyPaymentMethodInformation=Payment Method Information
+PartyPending=Pending
+PartyPendingCommunicationEvents=Pending Communication Events
+PartyAllCommunicationEvents=All Communication Events
+PartyFoundCommunicationEvents=Found Communication Events
 PartyPermissionSecurityGroupWithId=Permissions for SecurityGroup with ID
 PartyPermission=Permission
 PartyPermissionErrorForThisParty=You do not have permission to perform this operation for this party.<br>
