Added new cache entries from Jacopo for product config and datafile
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5474 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/base/config/cache.properties
+++ b/base/config/cache.properties
@@ -40,6 +40,10 @@ workflow.client.useSoftReference=true
 product.content.rendered.expireTime=300000
 product.content.rendered.useSoftReference=true
 
+# product.config cache settings, used by product (pc like) configurations, set to expire in 5 minutes by default to avoid too much administrative confusion, can comment this out or increase for better performance
+product.config.expireTime=300000
+product.config.useSoftReference=true
+
 # Development Mode - comment these out to better cache BSH scripts, etc
 #These are all cleared by default every 10000 milliseconds, or ten seconds
 minilang.SimpleMethodsDirect.expireTime=10000
@@ -65,3 +69,6 @@ widget.tree.webappResource.expireTime=10000
 
 template.ftl.general.expireTime=10000
 template.ftl.location.expireTime=10000
+
+ModelDataFile.expireTime=10000
+
