A number of cleanups and enhancements to the Example webapp; now somewhat complete
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5475 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/example/config/ExampleUiLabels.properties
+++ b/framework/example/config/ExampleUiLabels.properties
@@ -1,4 +1,5 @@
-# OFBiz UiLabel Properties 
+####
+# OFBiz Example Component UiLabel Properties 
 ####
 
 ExampleApplication=Example Application
@@ -7,7 +8,13 @@ ExampleCompanySubtitle=Part of the Open For Business Family of Open Source Softw
 
 ExampleExampleId=Example ID
 ExampleExample=Example
+ExampleExamples=Examples
+ExampleFeature=Feature
+ExampleFeatures=Features
+ExampleExampleFeature=Example Feature
+ExampleExampleFeatureId=Example Feature ID
 ExampleNewExample=New Example
+ExampleNewExampleFeature=New Example Feature
 
 ExampleErrorNoExampleStatusValidChange=Error\: status change from [${lookedUpValue.statusId}] to [${parameters.statusId}] is not allowed.
 ExamplePermissionError=Security Error\: to run ${methodShortDescription} you must have the EXAMPLE${securityAction} or EXAMPLE_ADMIN permission
@@ -16,3 +23,8 @@ ExampleViewPermissionError=You do not have permission to view this page. ("EXAMP
 PageTitleFindExample=Find Example
 PageTitleEditExample=Edit Example
 PageTitleEditExampleItems=Edit Example Items
+PageTitleEditExampleFeatureAppls=Edit Example Features
+
+PageTitleFindExampleFeature=Find Example Feature
+PageTitleEditExampleFeature=Edit Example Feature
+PageTitleEditExampleFeatureExampleAppls=Edit Example Feature Examples
