Added some ui labels
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5478 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -105,6 +105,8 @@ AccountingFixedAssetProductType=Fixed Asset Product Type
 AccountingFixedAssetProducts=Products
 AccountingFixedAssetProductTypeId=Type of usage
 AccountingFixedAssetRollUp=RollUp
+AccountingFixedAssetStdCostTypeId=Standard Cost Type
+AccountingFixedAssetStdCosts=Standard Costs
 AccountingFixedAssetTypeId=Asset Type
 AccountingFixedAssets=Fixed Assets
 AccountingFromParty=From Party
@@ -146,6 +148,7 @@ AccountingNewAgreement=Create Agreement
 AccountingNewAgreementItem=Create Agreement Item
 AccountingNewAgreementTerm=Create Agreement Term
 AccountingNewFixedAsset=New Fixed Asset
+AccountingNewFixedAssetStdCost=New Standard Cost
 AccountingNewPayment=New Payment
 AccountingNoAccount=No Account
 AccountingNoBillingAccount=No Billing Account
@@ -246,10 +249,12 @@ PageTitleEditBillingAccountInvoices=Edit Billing Account Invoices
 PageTitleEditBillingAccountPayments=Edit Billing Account Payments
 PageTitleEditBillingAccountRoles=Edit Billing Account Roles
 PageTitleEditBillingAccountTerms=Edit Billing Account Terms
+PageTitleEditFixedAssetStdCost=Edit Fixed Asset Standard Cost
 PageTitleEditGlAccount=Edit GL Account
 PageTitleEditGlobalGlAccount=Edit Global GL Account
 PageTitleFindBillingAccount=Find Billing Account(s)
 PageTitleFindGlobalGlAccount=Find Global GL Account
+PageTitleListFixedAssetStdCosts=List Fixed Asset Standard Costs
 PageTitleLogin=Login
 PageTitleLookupFixedAsset=Lookup Fixed Asset
 PageTitleLookupProduct=Lookup Product
