--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -194,6 +194,7 @@ AccountingRoleTypeIdTo=Role Type Id To
 AccountingRoutingNumber=Routing Number
 AccountingStatus=Status
 AccountingSuffixCard=Suffix on Card
+AccountingTaxSummary=Tax Summary Report
 AccountingTermTypeId=Term Type Id
 AccountingTextData=Text Data
 AccountingThruDate=Thru Date
