New returnId to link AcctgTrans to ReturnHeader.  Changed InvoiceItem taxGeoId to taxAuthGeoId, to avoid future confusion
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5483 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -167,7 +167,7 @@ AccountingPartyIdTo=Party Id To
 AccountingPartyMustBeInternalOrganization=Party must be an Internal Organization (set in PartyRole)
 AccountingPayment=Payment
 AccountingPaymentAlreadyReceived=Payment already received
-AccountingPaymentApplicationParameterMissing=Payment application requires either an invoiceId, a billingAccountId, or a taxGeoId
+AccountingPaymentApplicationParameterMissing=Payment application requires either an invoiceId, a billingAccountId, or a taxAuthGeoId
 AccountingPaymentDate=Payment Date
 AccountingPaymentID=PaymentID
 AccountingPaymentInformation=Payment Information
