Some small improvements to the general lookup stuff, also added ExampleFeature lookup to the example component
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5485 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/example/config/ExampleUiLabels.properties
+++ b/framework/example/config/ExampleUiLabels.properties
@@ -11,6 +11,7 @@ ExampleExample=Example
 ExampleExamples=Examples
 ExampleFeature=Feature
 ExampleFeatures=Features
+ExampleFeatureSource=Feature Source
 ExampleExampleFeature=Example Feature
 ExampleExampleFeatureId=Example Feature ID
 ExampleNewExample=New Example
