Added lookup page for facilities: thanks to Buxerolles for the patch (part of OFBIZ-389).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5488 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -390,6 +390,7 @@ ProductEditProductWithProductId=Edit Product with Product ID
 ProductEditShipment=Edit Shipment
 ProductEntireCatalog=Entire Catalog
 ProductErrorFacility=Error: facility
+ProductErrorFacilityIdNotFound=ERROR: Facility with ID [${facilityId}] not found
 ProductErrorNoPackagesFoundForShipment=ERROR: No packages found for this shipment
 ProductErrorOrderIdNotFound=ERROR: Order with ID [${orderId}] not found
 ProductErrorProductNotFound=ERROR: Product not found
