--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -309,11 +309,11 @@ PartySecurityGroups=Security Groups
 PartySecurityGroupId=Security Group ID
 PartySecurityGroupsList=SecurityGroups List
 PartySecurityViewPermissionError=PartySecurityViewPermissionError You do not have permission to view this page. ("SECURITY_VIEW" or "SECURITY_ADMIN" needed)
-PartySegmentGroupId= Segment Id
-PartySegmentGroupTypeId= Segment Type Id
+PartySegmentGroupId=Segment Id
+PartySegmentGroupTypeId=Segment Type Id
 PartySegmentGroupDescription=Description
-PartySegmentGroupProductStoreId= Product Store Id
-PartySegmentRoles=Segment Roles
+PartySegmentGroupProductStoreId=Product Store Id
+PartySegments=Segments
 PartySelectContactType=Select Contact Type
 PartySelectcRoleForParty=Select role(s) for this party
 PartySequenceId=Sequence Id 
@@ -422,4 +422,3 @@ partyservices.both_names_cannot_be_empty=Both 'lastName' and 'firstName' cannot 
 partyservices.cannot_delete_party_not_implemented=Cannot delete party, operation not yet implemented.
 party.id_is_digit=Specified party ID cannot start with a digit, numeric IDs are reserved for auto-generated IDs
 party.id_generation_failure=ERROR: Failure generating new party ID
-
