Added patch and new files from Al Byers for the Comm Event stuff
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5501 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -72,6 +72,8 @@ PageTitleNewPartyNote=New Party Note
 PageTitlePendingCommunications=Pending Communications
 PageTitleSecurityGroupsList=Security Groups List
 PageTitleShoppingList=Shopping List
+PageTitleViewCommPurposes=View Communication Purposes
+PageTitleViewCommRoles=View Communication Roles
 PageTitleViewPartyClassifications=View Party Classifications
 PageTitleViewPartyProfile=View Party Profile
 PageTitleViewPartyRole=View Party Roles
