Added patches from Si Chen to implement saving notification emails as CommunicationEvents; Jira #OFBIZ-402
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5514 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -293,3 +293,9 @@ shoppinglistevents.no_items_added        = No items were added.
 shoppinglistevents.problem_adding_product_to_cart = Could NOT add product ${productId} to cart.
 shoppinglistevents.select_items_to_add_to_list = Please select item(s) to add to the shopping list.
 shoppinglistevents.shoppingListId_is_required_parameter = shoppingListId is a required parameter.
+
+OrderSendConfirmationEmail        = Send a confirmation email
+OrderSendConfirmationEmailSendTo  = Send To
+OrderSendConfirmationEmailCCTo    = CC To
+OrderSendConfirmationEmailSubject = Subject 
+OrderSendConfirmationEmailNote    = Note
