Implemented two new services to quick run a production run task and to quick run all the tasks of a production run. A link to run the latter is also now available in the production run management page. OFBIZ-409
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5516 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -117,6 +117,8 @@ ManufacturingProductRoutingNotExist=Product Routing link doesn't exist
 ManufacturingProposedOrder=Proposed Order
 ManufacturingQuantity=Quantity
 ManufacturingQuantityMinimum=Quantity Minimum
+ManufacturingQuickRunAllTasks=Quick Run All Tasks
+ManufacturingQuickRunTask=Quick Run Task
 ManufacturingReason=Reason
 ManufacturingApproveRequirements=Approve Requirements
 ManufacturingRouting=Routing
