Implemented a service that allows to quickly manage the status of a production run. Also added links to quickly complete and close the production run. OFBIZ-410
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5517 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -164,7 +164,9 @@ ManufacturingLLCInit=Init Low Level Codes
 ManufacturingExplosionSingleLevel=Single Level Explosion
 ManufacturingExplosionManufacturing=Explosion (only for products needing manufacturing)
 ManufacturingDuplicatedComponentInBOM=The following existing association could cause loops: {0} --> {1}
-ManufacturingProductionRunPrintDocuments=Print Manufacturing Documents
+ManufacturingProductionRunPrintDocuments=Print Docs
+ManufacturingQuickComplete=Quick Complete
+ManufacturingQuickClose=Quick Close
 ManufacturingTaskActualSetupMillis=Actual Setup Time
 ManufacturingTaskActualMilliSeconds=Actual Time
 ManufacturingStartProductionRunTask=Start
