Production Run - implemented service to cancel a production run At now, you can cancel only production runs in created or docprinted status. Also, it is not possible to cancle a production run if other (non cancelled) production runs depend on it. OFBIZ-412 (partial)
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5518 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -170,6 +170,7 @@ ManufacturingQuickClose=Quick Close
 ManufacturingTaskActualSetupMillis=Actual Setup Time
 ManufacturingTaskActualMilliSeconds=Actual Time
 ManufacturingStartProductionRunTask=Start
+ManufacturingCancel=Cancel
 ManufacturingCompleteProductionRunTask=Complete
 ManufacturingIssueProductionRunTask=Issue Components
 ManufacturingDeclareProductionRunTask=Declare
