A number of improvements to the findparty screen, including moving the data preparation to a service, a couple of flexibility improvements, uiLabel fixes, and improved lookup and show all links and how they are processed too
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5523 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -277,6 +277,7 @@ PartyPermissions=Permissions
 PartyPermissionId=Permission ID
 PartyPersonalInformation=Personal Information
 PartyPhoneNumber=Phone Number
+PartyPostal=Postal
 PartyPostalCodeMissing=Zip/Postal Code is missing
 PartyPurposeTypeMissingCannotAdd=Purpose type not specified, cannot add purpose to contact mechanism
 PartyPurposeTypeMissingCannotRemove=Purpose type not specified, cannot remove purpose from contact mechanism 
@@ -339,6 +340,7 @@ PartySubject=Subject
 PartySuffix=Suffix
 PartySupplier=Supplier
 PartyTaxInfos=Tax Infos
+PartyTelecom=Telecom
 PartyTerm=Term
 PartyTermTyp=Term Type
 PartyTermValue=Term Value
