Added Other label
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5524 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -238,7 +238,8 @@ CommonOptions=Options
 CommonOr=OR
 CommonOrder=Order
 CommonOrders=Orders
-CommonOverridesSelection=(overrides either of the above selections.)
+CommonOther=Other
+CommonOverridesSelection=(overrides either of the above selections)
 CommonPage=Page
 CommonPartyID=Party Id
 CommonPassword=Password
