--- a/applications/manufacturing/config/ManufacturingUiLabels.properties
+++ b/applications/manufacturing/config/ManufacturingUiLabels.properties
@@ -164,7 +164,7 @@ ManufacturingLLCInit=Init Low Level Codes
 ManufacturingExplosionSingleLevel=Single Level Explosion
 ManufacturingExplosionManufacturing=Explosion (only for products needing manufacturing)
 ManufacturingDuplicatedComponentInBOM=The following existing association could cause loops: {0} --> {1}
-ManufacturingProductionRunPrintDocuments=Print Docs
+ManufacturingConfirmProductionRun=Confirm
 ManufacturingQuickComplete=Quick Complete
 ManufacturingQuickClose=Quick Close
 ManufacturingTaskActualSetupMillis=Actual Setup Time
