New screen to view comunication event, which allows edit afterwards
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5530 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -167,6 +167,7 @@ PartyCustomerRequest=Customer Request
 PartyCybersourceAvsOver=Cybersource AVS Override
 PartyDeleteVendorPermissionError=Security Error\: to run deleteVendor you must have the PARTYMGR_CREATE or PARTYMGR_ADMIN permission
 PartyDisabled=DISABLED
+PartyViewCommunicationEvent=View Communication Event
 PartyEditCommunicationEvent=Edit Communication Event
 PartyEditContactInformation=Edit Contact Information
 PartyEditSecurityGroupWithId=Edit Security Group With ID
