Some label changes from Hans Bakker
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5541 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -118,10 +118,15 @@ AccountingIncomeStatement=Income Statement
 AccountingInformation=Information
 AccountingInvoice=Invoice
 AccountingInvoiceDate=Invoice Date
+AccountingInvoiceHeader=Header
 AccountingInvoiceID=InvoiceID
 AccountingInvoiceItem=Invoice Item
-AccountingInvoiceItems=Invoice Items
-AccountingInvoicePayments=Invoice Payments
+AccountingInvoiceItems=Items
+AccountingInvoiceOverview=Overview
+AccountingInvoicePayments=Payments
+AccountingInvoicePDF=PDF
+AccountingInvoiceRoles=Roles
+AccountingInvoiceStatus=Status
 AccountingInvoiceTotal=Invoice Total
 AccountingInvoices=Invoices
 AccountingInvoicesFound=Invoices Found
@@ -189,6 +194,7 @@ AccountingQuantity=Quantity
 AccountingReceivePayment=Receive Payment
 AccountingReferenceNumber=Reference Number
 AccountingReports=Reports
+AccountingRoleType=Role Type
 AccountingRoleTypeIdFrom=Role Type Id From
 AccountingRoleTypeIdTo=Role Type Id To
 AccountingRoutingNumber=Routing Number
@@ -215,6 +221,7 @@ AccountingFX=Foreign Exchange Rates
 
 CommonAccounting=Accounting
 CommonAttn=Attn
+CommonCurrencyUom=Currency
 CommonCreateNew=Create New
 CommonEdit=Edit
 CommonFind=Find
