Facility now has default inventory item type (serialized/non-serialized) and returns can be made as non-serialized inventory (as well as serialized from before) OFBIZ-354.1.patch
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5546 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -417,6 +417,7 @@ ProductFacility=Facility
 ProductFacilityContainer=Facility / Container
 ProductFacilityContainerId=Facility or Container ID
 ProductFacilityCreatePermissionError=You do not have permission to view this page. ("FACILITY_CREATE" or "FACILITY_ADMIN" needed)
+ProductFacilityDefaultInventoryItemType=Default Inventory Item Type
 ProductFacilityGroup=Facility Group
 ProductFacilityGroupId=Facility Group ID
 ProductFacilityGroupList=Facility Group List
