Creates both bill-from vendor and bill-to customer for both sales and purchase orders.  Affects all orders created from order manager, ecommerce, and POS.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5549 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -104,6 +104,7 @@ OrderOrderEntryCustomerInfo = Order Entry Customer Info
 OrderOrderEntryOrderTerms = Order Entry Order Terms
 OrderOrderEntryPaymentSettings = Order Entry Payment Settings
 OrderOrderEntryShipToSettings = Order Entry Ship-To Settings
+OrderOrderEntryInternalOrganziation = Internal Organization
 OrderOrderFor = Order for
 OrderOrderFound = Order(s) Found
 OrderOrderHeaderInfo = Order Header Info
