Order list view of orders.  OFBiz-442
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5556 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -97,6 +97,8 @@ OrderNotesCreateNew = Create New
 OrderNotesForRequestItem = Notes For Request Item
 OrderOfflineCheckMoney = Offline: Check/Money Order
 OrderOrder = Order
+OrderOrderBillFromParty = Bill From Party
+OrderOrderBillToParty = Bill To Party
 OrderOrderConfirmation = Order Confirmation
 OrderOrderDate = Order Date
 OrderOrderEntry = Order Entry
