Security permissions for order list page, esp. purchase order view permissions
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5557 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -235,7 +235,7 @@ OrderViewEditDelivery = View/Delivery Schedule Info
 OrderViewEditDeliveryScheduleInfo = View/Edit Delivery Schedule Info
 OrderViewImage = View Image
 OrderViewOrder = View Order
-OrderViewPermissionError = You do not have permission to view this page. ("ORDERMGR_VIEW" or "ORDERMGR_ADMIN" needed)
+OrderViewPermissionError = You do not have permission to view this page.
 OrderWorkflow = Workflow
 PageTitleLogin = Login
 calendar_click_here_for_calendar = Click here For Calendar
