New feature to mark orders as complete when all their items are complete (ie, issued and shipped).  Added .getOrderItemsByCondition method to OrderReadHelper
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5560 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -32,6 +32,7 @@ OrderChooseFollowingForGift = You may also choose one of the following for your 
 OrderClearOrder = Clear Order
 OrderCompanyName = OFBiz: Order Manager
 OrderCompanySubtitle = Part of the Open For Business Family of Open Source Software
+OrderCompleteOrder = Complete Order
 OrderContactInformation = Contact Information
 OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
