Various additions from Al Byers related to communication events and contact lists
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5569 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -4,6 +4,13 @@
 ####
 
 # empty so far, everything in common UI labels
+ContactList=Contact List
+ContactListCommEvent=Comm Event
+ContactListContactListId=Contact List Id
+ContactListCommEventCreate=Create New Contact List Comm Event
+ContactListCreate=Create New Contact List
+ContactListPartyCreate=Create New Contact List Party
+ContactListParty=Party
 SegmentGroupSegmentGroupId=Segment Group Id
 SegmentGroupSegmentGroupTypeId=Segment Group Type Id
 SegmentGroupDescription=Description
@@ -12,12 +19,19 @@ SegmentGroupCreate=Create New Segment Group
 SegmentGroupClassCreate=Create New Segment Group Classification
 SegmentGroupGeoCreate=Create New Segment Group Geo
 SegmentGroupRoleCreate=Create New Segment Group Role
+PageTitleAddContactList=Add Contact List
+PageTitleEditContactListCommEvent=Edit Contact List Comm Event
+PageTitleEditContactList=Edit Contact List
+PageTitleEditContactListParty=Edit Contact List Party
 PageTitleEditSegmentGroup=Edit Segment Group
 PageTitleFindSegmentGroup=Find Segment Group
 PageTitleListSegmentGroupClass=List Segment Group Classifications
 PageTitleEditSegmentGroupClass=Edit Segment Group Classification
 PageTitleListSegmentGroupGeo=List Segment Group Geos
 PageTitleEditSegmentGroupGeo=Edit Segment Group Geo
+PageTitleListContactListCommEvent=List Contact List Comm Events
+PageTitleListContactList=List Contact List
+PageTitleListContactListParty=List Contact List Parties
 PageTitleListSegmentGroupRole=List Segment Group Roles
 PageTitleEditSegmentGroupRole=Edit Segment Group Role
 SegmentGroupSegmentGroup=Segment
