--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -44,6 +44,7 @@ Description=Description
 
 OrderNewOrder=New Order
 OrderOrders=Orders
+PageTitleCommEvents=Communication Events
 PageTitleCreateNewPartyDetail=Create New Party Detail
 PageTitleEditAvsOverride=Edit AVS Override
 PageTitleEditCommunication=Edit Communication
@@ -65,7 +66,9 @@ PageTitleFindCommunications=Find Communications
 PageTitleFindParty=Find Party(s)
 PageTitleFindPartyClassificationGroups=Find Party Classification Groups
 PageTitleFindSecurityGroup=Find Security Group
+PageTitleListCommCustRequests=List Comm Customer Requests
 PageTitleListCommunications=List Communications
+PageTitleListCommWorkEfforts=List Comm WorkEfforts
 PageTitleLogin=Login
 PageTitleMain=Main Page
 PageTitleNewPartyNote=New Party Note
@@ -124,7 +127,9 @@ PartyClientIP=Client IP
 PartyClientUser=Client User 
 PartyComments=Comments
 PartyCommEvent=Event
+PartyCommCustRequests=Communication Customer Requests
 PartyCommunications=Communications
+PartyCommWorkEfforts=Communication Work Efforts
 PartyCommunicationsWith=Communications with
 PartyCompanyName=OFBiz: Party Manager
 PartyCompanySubtitle=Part of the Open For Business Family of Open Source Software
@@ -132,6 +137,7 @@ PartyContactAllowSolicitation=Allow Solicitation
 PartyContactEffectiveThru=Effective Thru
 PartyContactExt=ext
 PartyContactInformation=Contact Information
+PartyContactListPartyCreate=Create New Contact List
 PartyContactMechIdMissing=Contact Mechanism ID is missing
 PartyContactMechTypeIdMissing=Contact Mech Type ID is missing
 PartyContactMechNotFoundCannotDelete=ERROR: Could not delete contact info (party contact mech not found)
@@ -169,7 +175,11 @@ PartyDeleteVendorPermissionError=Security Error\: to run deleteVendor you must h
 PartyDisabled=DISABLED
 PartyViewCommunicationEvent=View Communication Event
 PartyEditCommunicationEvent=Edit Communication Event
-PartyEditContactInformation=Edit Contact Information
+PartyEditCommCustRequest=Edit Communication Customer Request
+PartyEditCommPurpose=Edit Communication Work Purpose
+PartyEditCommRole=Edit Communication Role
+PartyEditCommWorkEffort=New Communication Work Effort
+PPartyEditContactInformation=Edit Contact Information
 PartyEditSecurityGroupWithId=Edit Security Group With ID
 PartyEftAccount=EFT Account
 PartyEmailAddress=E-Mail Address
@@ -203,7 +213,11 @@ PartyInitialUserAgent=Initial User Agent
 PartyLastName=Last Name
 PartyLastNameMissingError=Lastname is Missing
 PartyLastVisit=Last Visit(s)  
-PartyListCommunicationEvents=List Communication Events
+PartyListCommunicationEvents=Found Communication Events
+PartyListCommCustRequest=Found Communication Customer Requests
+PartyListCommPurpose=Found Communication Work Purposes
+PartyListCommRole=Found Communication Roles
+PartyListCommWorkEffort=Found Communication Work Efforts
 PartyListItems=List Items
 PartyListName=List Name
 PartyListType=List Type
@@ -224,7 +238,11 @@ PartyMothersMaidenName=Mothers Maiden Name
 PartyMsgContactHavePurpose=Note: this new contact information will have the purpose
 PartyMsgContactNotBelongToYou=The contact information specified does not belong to you, you may not view or edit it.
 PartyName=Name
+PartyNewCommCustRequest=New Communication Customer Request
+PartyNewCommPurpose=New Communication Work Purpose
 PartyNewCommunication=New Communication
+PartyNewCommRole=New Communication Role
+PartyNewCommWorkEffort=New Communication Work Effort
 PartyNewEvent=New Event
 PartyNewRoleType=New Role Type
 PartyNewSecurityGroup=New Security Group
