UI label correction - balance sheets only for closed time periods
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5591 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -282,6 +282,6 @@ GlFiscalType=Fiscal Type
 isClosed=CLOSED
 isNotClosed=NOT CLOSED
 TimePeriod=Time Period
-ByTimePeriod=By Time Period
+ByTimePeriod=For Closed Time Period
 ByDate=By Date
 AsOf=As Of
