Added patch from Al Byers with contact list functionality
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5598 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -137,6 +137,7 @@ PartyContactAllowSolicitation=Allow Solicitation
 PartyContactEffectiveThru=Effective Thru
 PartyContactExt=ext
 PartyContactInformation=Contact Information
+PartyContactList=Contact List
 PartyContactListPartyCreate=Create New Contact List
 PartyContactMechIdMissing=Contact Mechanism ID is missing
 PartyContactMechTypeIdMissing=Contact Mech Type ID is missing
