A bunch of contact list updates from Al Byers, including new feature to pass field current values to a lookup form; this also includes numerous formatting and XML structure cleanups, and fixed a couple of issue with naming problems (like LookupParty versus LookupPartyName), and so on
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5603 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -34,6 +34,7 @@ PageTitleListContactList=List Contact List
 PageTitleListContactListParty=List Contact List Parties
 PageTitleListSegmentGroupRole=List Segment Group Roles
 PageTitleEditSegmentGroupRole=Edit Segment Group Role
+PageTitlePreferredContactMech=Preferred Contact Mechanism
 SegmentGroupSegmentGroup=Segment
 SegmentGroupSegmentGroupType=Type
 SegmentGroupSegmentGroupClassification=Classification
