--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -489,6 +489,7 @@ PartyCityMissing=City is Missing
 PartyCompanyNameMissingError=Company Name is missing
 PartyContactInfoNotBelongToYou=The contact information specified does not belong to you, you may not view or edit it
 PartyContactInformation=Contact Information
+PartyContactLists=Contact Lists
 PartyContactMechIdMissing=Contact Mech ID is missing
 PartyContactNumber=Contact Number
 PartyContactNumberMissing=Contact Number is missing
