--- a/framework/minilang/config/MiniLangErrorUiLabels.properties
+++ b/framework/minilang/config/MiniLangErrorUiLabels.properties
@@ -18,5 +18,6 @@
 ##################################################################
 # SimpleMethod	
 ##################################################################
-simpleMethod.must_logged_process=You must be logged in to complete the ${shortDescription} process		simpleMethod.error_begin_transaction=Error trying to begin transaction, could not process method		simpleMethod.error_running=Error running the simple-method
-
+simpleMethod.must_logged_process=You must be logged in to complete the ${shortDescription} process
+simpleMethod.error_begin_transaction=Error trying to begin transaction, could not process method
+simpleMethod.error_running=Error running the simple-method
