First draft of the quote adjustment stuff (OFBIZ-468): it is now possible to run (from the new adjustment screen) the auto adjustment calc and see the results without (evident) errors: both header and lines adjustments are created and also promo quote items. Manual adjustments and the ability to apply cart adjustments from quote adjustments are still not implemented.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5620 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -120,6 +120,7 @@ OrderOrderNumber = Order Number
 OrderOrderOptionSettings = Order Option Settings
 OrderOrderPurchaseToBeScheduled = Order Purchase To Be Scheluded
 OrderOrderQuote = Quote
+OrderOrderQuoteAdjustments=Adjustments
 OrderOrderQuoteAttributeName = Attribute Name
 OrderOrderQuoteAttributeValue = Attribute Value
 OrderOrderQuoteAttributes = Quote Attributes
