This is the first draft of manual quote adjustments stuff:
- created standard services (xml) to manage (manual) quote adjustments 
(createQuoteAdjustment, updateQuoteAdjustment, removeQuoteAdjustment)
- first draft of the EditQuoteAdjustment screen
- now manual adjustments are not removed when the auto adjustment routine is run
- manual (both header and item) adjustments are now applied to the cart


git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5628 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -23,6 +23,7 @@ OrderAdjustment = Adjustment
 OrderAdjustments = Adjustments
 OrderAllowSplit = Allow Split
 OrderApproveOrder = Approve Order
+OrderAutoCreateQuoteAdjustments=Auto Create Adjustments
 OrderBeSureIncludeOrder = Be sure to include your order
 OrderCancelAllItems = Cancel all Items
 OrderCancelled = Cancelled
@@ -37,6 +38,7 @@ OrderContactInformation = Contact Information
 OrderCreateNewReturn = Create new return
 OrderCreateOrder = Create Order
 OrderCreateOrderQuote = Create New Quote
+OrderCreateOrderQuoteAdjustment=Create Manual Adjustment
 OrderCreateOrderQuoteAttribute = Create New Quote Attribute
 OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
 OrderCreateReturn=Create return
