--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -72,6 +72,7 @@ OrderItemTotal = Item Total
 OrderItemsOrdered = Items Ordered
 OrderItemsReturned = Items Returned
 OrderItemsSubTotal = Items SubTotal
+OrderJurisdiction = Jurisdiction
 OrderLookupOrder = Lookup Order(s)
 OrderLookupReturn = Lookup Return(s)
 OrderNbr = #
