Some changes in the ProductPrice table and the way calculateProductPrice works; in the past we had an over-use of the productPriceTypeId and have come up with a need to use some of those other price types, but along with the price calculation and such. The solution is to introduce the concept of the ProductPricePurpose, so we have a new table for that and a new field on the ProductPrice entity for the productPricePurposeId. Previous calculated prices are now considered to have the PURCHASE purpose, and for the calculateProductPrice service if you don't pass in the purpose you want it defaults to PURCHASE. Some previous ProductPriceTypes are no longer used as such and are now ProductPricePurposes, namely RECURRING_CHARGE, USAGE_CHARGE, and COMPONENT_PRICE. The real driving force behind this change is a need to support price calculation for RECURRING_CHARGE and COMPONENT_PRICE, and other custom or future price purposes. NOTE: this did require a primary key change for the ProductPrice table, the calculateProductPrice service will still support a null productPricePurposeId so that after an upgrade the whole system won't be useless, but that table or the pk on that table should be rebuilt right away for this change. All ProductPrice seed data has been updated to support this change.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5638 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -251,6 +251,7 @@ CommonPriority=Priority
 CommonProfile=Profile
 CommonProvince=Province
 CommonPublish=Publish
+CommonPurpose=Purpose
 CommonQualifier=Qualifier
 CommonQuantity=Quantity
 CommonQuarter=Quarter
