Created admin extensions and some small fixes for ProductPaymentMethodType stuff, plus related fields on ProductStore and ProductStorePaymentSetting
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5639 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -694,6 +694,7 @@ ProductParentCategoryId=Parent Category [ID]
 ProductParentGroupId=Parent Group [Id]
 ProductParties=Parties
 ProductPartyFreeShipping=The Party ID for Free Shipping actions is Carrier Party ID to give free shipping for (if blank any Carrier Parties may receive free shipping).
+ProductPaymentTypes=Payment Types
 ProductPerUnitPrice=Per Unit Price
 ProductPhoneNumbers=Phone Numbers
 ProductPhysicalInventoryVariance=(This can be changed by doing a physical inventory variance below)
