These are various look and feel changes to improve the consistency of buttons and such; the buttontext style now does as the name would imply, and makes it look like our smallSubmit style button; a new style called linktext should be used in place of buttontext for links that should not look like buttons; this commit includes the review of a few pages to start making this change, but help in this area would be greatly appreciated.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5648 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/ecommerce/config/EcommerceUiLabels.properties
+++ b/applications/ecommerce/config/EcommerceUiLabels.properties
@@ -115,7 +115,7 @@ EcommerceContinueShopping=Continue Shopping
 EcommerceCustomerReviews=Customer Reviews
 EcommerceCustomerTaxID=Customer Tax ID
 EcommerceDataResourceId=Data Resource Id
-EcommerceDetailsButton=[Details]
+EcommerceDetailsButton=Details
 EcommerceEcommerce=Ecommerce
 EcommerceEmptyBody=Empty Body
 EcommerceEmptyCart=Empty Cart
@@ -224,7 +224,7 @@ EcommerceRatings=Ratings
 EcommerceRead=Read
 EcommerceRecalculateCart=Recalculate Cart
 EcommerceRecurrence=Recurrence
-EcommerceRefineButton=[Refine]
+EcommerceRefineButton=Refine
 EcommerceRemoveSelected=Remove Selected
 EcommerceReplaceWithVariation=Replace With Variation
 EcommerceRespond=Respond
@@ -258,7 +258,7 @@ EcommerceSubject=Subject
 EcommerceSummary=Summary
 EcommerceSummaryInformation=Summary Information
 EcommerceSurveys=Surveys
-EcommerceTakeSurvey="[Take Survey]"
+EcommerceTakeSurvey=Take Survey
 EcommerceTellAFriend=Tell-A-Friend
 EcommerceTellAFriendSorry=Sorry, you cannot send this page to a friend. Please select from either a category or product.
 EcommerceTextOnly=Text only
@@ -270,7 +270,7 @@ EcommerceTotal=Total
 EcommerceTotalPrice=Total Price
 EcommerceUnitPrice=Unit Price
 EcommerceUnsupportedQuestionType=Unsupported question type
-EcommerceUpdateSurvey="[Update Survey]"
+EcommerceUpdateSurvey=Update Survey
 EcommerceUploadNewFile=Upload New File
 EcommerceUseEmailAddress=Use Email Address
 EcommerceVariationToCart=of Variation To Cart
