A bunch of new look and feel changes, plus a whole bunch of bug fixes in the contact list stuff; have some extensions to put in there but haven't been able to yet because so much is screwed up; there are a few things still broken in the Contact List area of the Marketing Manager, but committing this to have a check point and because Al just sent a bunch of patches which I think are now going be a nightmare to merge...
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5650 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -3,14 +3,14 @@
 #
 ####
 
-# empty so far, everything in common UI labels
+MarketingCompanyName=OFBiz: Marketing Manager
+MarketingCompanySubtitle=Part of the Open For Business Family of Open Source Software
+
 ContactList=Contact List
-ContactListCommEvent=Comm Event
 ContactListContactListId=Contact List Id
 ContactListCommEventCreate=Create New Contact List Comm Event
 ContactListCreate=Create New Contact List
 ContactListPartyCreate=Create New Contact List Party
-ContactListParty=Party
 SegmentGroupSegmentGroupId=Segment Group Id
 SegmentGroupSegmentGroupTypeId=Segment Group Type Id
 SegmentGroupDescription=Description
@@ -48,6 +48,3 @@ SegmentGroupGeoName=Name
 SegmentGroupGeoCode=Code
 SegmentGroupGeoSecCode=Secondary Code
 SegmentGroupGeoAbbr=Abbreviation
-
-
-
