--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -126,7 +126,8 @@ PartyClient=Client
 PartyClientIP=Client IP
 PartyClientUser=Client User 
 PartyComments=Comments
-PartyCommEvent=Event
+PartyCommEvent=Comm Event
+PartyCommEvents=Comm Events
 PartyCommCustRequests=Communication Customer Requests
 PartyCommunications=Communications
 PartyCommWorkEfforts=Communication Work Efforts
