--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -35,8 +35,8 @@ CommonAddDefault=Add Default
 CommonAddId=Add ID
 CommonAddNew=Add New
 CommonAddProblem=Add Problem
-CommonAddress1=Adresse 1
-CommonAddress2=Adresse 2
+CommonAddress1=Address 1
+CommonAddress2=Address 2
 CommonAddressLine=Address Line
 CommonAddresses=Addresses
 CommonAll=All
